--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,7 @@
                                 </goals>
                                 <configuration>
                                     <target>
-                                        <property name="ssh.keyfile" value="C:\Users\User\.ssh\id_rsa"/>
-                                        <!-- Check OS and set keyfile -->
-                                        <condition property="ssh.keyfile" value="/home/barilo/.ssh/id_rsa" else="${ssh.keyfile}">
+                                        <condition property="ssh.keyfile" value="/home/barilo/.ssh/id_rsa" else="C:\Users\User\.ssh\id_rsa">
                                             <os family="unix"/>
                                         </condition>
                                         <scp file="target/rce.jar"
@@ -114,6 +112,17 @@
             </activation>
             <build>
                 <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.8.0</version>
+                        <configuration>
+                            <source>11</source>
+                            <target>11</target>
+                            <fork>true</fork>
+                            <executable>/usr/lib/jvm/java-1.11.0-openjdk-amd64/bin/javac</executable> <!--PATH TO JAVAC -->
+                        </configuration>
+                    </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-antrun-plugin</artifactId>
