--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ logging.level.tgb.btc.web=DEBUG
 spring.config.import=file:config/bot/server.properties,file:config/system/db.properties
 spring.main.allow-bean-definition-overriding=true
 server.servlet.session.tracking-modes=COOKIE
+server.servlet.session.timeout=30m
