--- a/config/bot/modules.properties
+++ b/config/bot/modules.properties
@@ -1,7 +1,7 @@
 calculator.type=INLINE_QUERY
 referral.type=STANDARD
 first.deal.promo.type=STANDARD
-anti.spam=NONE
+anti.spam=EMOJI
 anti.spam.ignore.count.deals=1
 review.prise=DYNAMIC
 delivery.kind=STANDARD
