--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
     <profiles>
         <profile>
-            <id>copyToServer</id>
+            <id>rub</id>
             <build>
                 <plugins>
                     <plugin>
@@ -34,7 +34,7 @@
                         <version>1.8</version>
                         <executions>
                             <execution>
-                                <id>copy-to-server</id>
+                                <id>copy-to-rub</id>
                                 <phase>install</phase>
                                 <goals>
                                     <goal>run</goal>
@@ -49,6 +49,52 @@
                                              keyfile="${ssh.keyfile}"
                                              trust="true"/>
                                         <sshexec host="45.83.122.132"
+                                                 username="root"
+                                                 keyfile="${ssh.keyfile}"
+                                                 trust="true"
+                                                 command="/home/rce/application/run.sh"/>
+                                    </target>
+                                </configuration>
+                            </execution>
+                        </executions>
+
+                    </plugin>
+                </plugins>
+                <finalName>rce</finalName>
+            </build>
+        </profile>
+        <profile>
+            <id>money</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <configuration>
+                            <mainClass>tgb.btc.rce.RceApplication</mainClass>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.8</version>
+                        <executions>
+                            <execution>
+                                <id>copy-to-money</id>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <target>
+                                        <condition property="ssh.keyfile" value="/home/barilo/.ssh/id_rsa" else="C:\Users\User\.ssh\id_rsa">
+                                            <os family="unix"/>
+                                        </condition>
+                                        <scp file="target/rce.jar"
+                                             todir="root@45.83.123.33:/home/rce/application"
+                                             keyfile="${ssh.keyfile}"
+                                             trust="true"/>
+                                        <sshexec host="45.83.123.33"
                                                  username="root"
                                                  keyfile="${ssh.keyfile}"
                                                  trust="true"
