--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,52 @@
             </build>
         </profile>
         <profile>
+            <id>bel</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <configuration>
+                            <mainClass>tgb.btc.rce.RceApplication</mainClass>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.8</version>
+                        <executions>
+                            <execution>
+                                <id>copy-to-rub</id>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <target>
+                                        <condition property="ssh.keyfile" value="/home/barilo/.ssh/id_rsa" else="C:\Users\User\.ssh\id_rsa">
+                                            <os family="unix"/>
+                                        </condition>
+                                        <scp file="target/rce.jar"
+                                             todir="root@45.83.122.247:/home/rce/application"
+                                             keyfile="${ssh.keyfile}"
+                                             trust="true"/>
+                                        <sshexec host="45.83.122.247"
+                                                 username="root"
+                                                 keyfile="${ssh.keyfile}"
+                                                 trust="true"
+                                                 command="/home/rce/application/run.sh"/>
+                                    </target>
+                                </configuration>
+                            </execution>
+                        </executions>
+
+                    </plugin>
+                </plugins>
+                <finalName>rce</finalName>
+            </build>
+        </profile>
+        <profile>
             <id>windows</id>
             <activation>
                 <os>
