--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
                     <mainClass>tgb.btc.rce.RceApplication</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.0.2155</version>
+            </plugin>
         </plugins>
     </build>
 
