--- a/pom.xml
+++ b/pom.xml
@@ -425,6 +425,12 @@
             <artifactId>rce-api</artifactId>
             <version>1.2-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>3.6.28</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
