--- a/config/bot/games/games.properties
+++ b/config/bot/games/games.properties
@@ -1,8 +1,8 @@
 #(STANDARD/STANDARD_ADMIN/NONE)
-slot.reel=STANDARD
+slot.reel=NONE
 
 #(STANDARD/STANDARD_ADMIN/NONE)
-dice=STANDARD
+dice=NONE
 
 #(STANDARD/STANDARD_ADMIN/NONE)
-rock.paper.scissors=STANDARD
+rock.paper.scissors=NONE
