--- a/pom.xml
+++ b/pom.xml
@@ -63,11 +63,11 @@
                                             <os family="unix"/>
                                         </condition>
                                         <scp file="target/rce.jar"
-                                             todir="root@45.83.122.132:/home/rce/application"
+                                             todir="rce@45.83.122.132:/home/rce/application"
                                              keyfile="${ssh.keyfile}"
                                              trust="true"/>
                                         <sshexec host="45.83.122.132"
-                                                 username="root"
+                                                 username="rce"
                                                  keyfile="${ssh.keyfile}"
                                                  trust="true"
                                                  command="/home/rce/application/run.sh"/>
@@ -109,11 +109,11 @@
                                             <os family="unix"/>
                                         </condition>
                                         <scp file="target/rce.jar"
-                                             todir="root@45.83.123.33:/home/rce/application"
+                                             todir="rce@45.83.123.33:/home/rce/application"
                                              keyfile="${ssh.keyfile}"
                                              trust="true"/>
                                         <sshexec host="45.83.123.33"
-                                                 username="root"
+                                                 username="rce"
                                                  keyfile="${ssh.keyfile}"
                                                  trust="true"
                                                  command="/home/rce/application/run.sh"/>
@@ -154,11 +154,11 @@
                                             <os family="unix"/>
                                         </condition>
                                         <scp file="target/rce.jar"
-                                             todir="root@45.83.122.247:/home/rce/application"
+                                             todir="rce@45.83.122.247:/home/rce/application"
                                              keyfile="${ssh.keyfile}"
                                              trust="true"/>
                                         <sshexec host="45.83.122.247"
-                                                 username="root"
+                                                 username="rce"
                                                  keyfile="${ssh.keyfile}"
                                                  trust="true"
                                                  command="/home/rce/application/run.sh"/>
@@ -200,11 +200,11 @@
                                             <os family="unix"/>
                                         </condition>
                                         <scp file="target/rce.jar"
-                                             todir="root@45.83.122.228:/home/rce/application"
+                                             todir="rce@45.83.122.228:/home/rce/application"
                                              keyfile="${ssh.keyfile}"
                                              trust="true"/>
                                         <sshexec host="45.83.122.228"
-                                                 username="root"
+                                                 username="rce"
                                                  keyfile="${ssh.keyfile}"
                                                  trust="true"
                                                  command="/home/rce/application/run.sh"/>
