--- a/config/bot/modules.properties
+++ b/config/bot/modules.properties
@@ -3,5 +3,5 @@ referral.type=STANDARD
 first.deal.promo.type=STANDARD
 anti.spam=EMOJI
 anti.spam.ignore.count.deals=1
-review.prise=DYNAMIC
+review.prise=STANDARD
 delivery.kind=STANDARD
