--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ logging.level.tgb.btc.rce=DEBUG
 logging.level.tgb.btc.library=DEBUG
 logging.level.tgb.btc.web=DEBUG
 spring.config.import=file:config/bot/server.properties,file:config/system/db.properties,file:config/bot/modules.properties,\
-  file:config/bot/games/games.properties
+  file:config/bot/games/games.properties,file:config/system/wallet.properties
 spring.main.allow-bean-definition-overriding=true
 server.servlet.session.tracking-modes=COOKIE
 server.servlet.session.timeout=30m
