--- a/config/system/wallet.properties
+++ b/config/system/wallet.properties
@@ -1,3 +1,4 @@
+auto.withdrawal.litecoin=false
 electrum.litecoin.rpc.url=http://localhost:7777/
 rpc.litecoin.username=user
 rpc.litecoin.password=RfeTT6gL61kOArGoMAkr3Q==
