--- a/config/system/wallet.properties
+++ b/config/system/wallet.properties
@@ -1,4 +1,4 @@
-auto.withdrawal.litecoin=false
+auto.withdrawal.litecoin=true
 electrum.litecoin.rpc.url=http://localhost:7777/
 rpc.litecoin.username=user
 rpc.litecoin.password=RfeTT6gL61kOArGoMAkr3Q==
