--- a/config/design/buttons.properties
+++ b/config/design/buttons.properties
@@ -1,30 +1,30 @@
-#\u0413\u043B\u0430\u0432\u043D\u043E\u0435 \u043C\u0435\u043D\u044E
-BUY_BITCOIN=\uD83D\uDCB0 \u041A\u0443\u043F\u0438\u0442\u044C
-SELL_BITCOIN=\uD83D\uDCC8 \u041F\u0440\u043E\u0434\u0430\u0442\u044C
-CABINET=\uD83D\uDDC4 \u041A\u0430\u0431\u0438\u043D\u0435\u0442
-CONTACTS=\uD83D\uDEC3 \u041A\u043E\u043D\u0442\u0430\u043A\u0442\u044B
-DRAWS=\uD83C\uDFB0 \u0420\u043E\u0437\u044B\u0433\u0440\u044B\u0448\u0438
-REFERRAL=\uD83E\uDD1D \u0420\u0435\u0444\u0435\u0440\u0430\u043B\u044C\u043D\u0430\u044F \u043F\u0440\u043E\u0433\u0440\u0430\u043C\u043C\u0430
+#Главное меню
+BUY_BITCOIN=💰 Купить
+SELL_BITCOIN=📈 Продать
+CABINET=🗄 Кабинет
+CONTACTS=🛃 Контакты
+DRAWS=🎰 Розыгрыши
+REFERRAL=🤝 Реферальная программа
 
-#\u0423\u0442\u0438\u043B\u044C\u043D\u044B\u0435
-BACK=\u25C0\uFE0F \u041D\u0430\u0437\u0430\u0434
+#Утильные
+BACK=◀️ Назад
 
-#\u041C\u0435\u043D\u044E \u0440\u043E\u0437\u044B\u0433\u0440\u044B\u0448\u0435\u0439
-LOTTERY=\uD83C\uDFB0 \u041B\u043E\u0442\u0435\u0440\u0435\u044F
-ROULETTE=\uD83C\uDFB0 \u0420\u0443\u043B\u0435\u0442\u043A\u0430
+#Меню розыгрышей
+LOTTERY=🎰 Лотерея
+ROULETTE=🎰 Рулетка
 
-USE_PROMO=\u0418\u0441\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u044C, %s
-DONT_USE_PROMO=\u0411\u0435\u0437 \u043F\u0440\u043E\u043C\u043E\u043A\u043E\u0434\u0430, %s
-USE_SAVED_WALLET=\u0418\u0441\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u044C \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u043D\u044B\u0439 \u0430\u0434\u0440\u0435\u0441
-PAID=\u042F \u043E\u043F\u043B\u0430\u0442\u0438\u043B(\u0430)
+USE_PROMO=Использовать, %s
+DONT_USE_PROMO=Без промокода, %s
+USE_SAVED_WALLET=Использовать сохраненный адрес
+PAID=Я оплатил(а)
 
 BYN=BYN
 RUB=RUB
 UAH=UAH
 
-#\u041A\u0430\u0431\u0438\u043D\u0435\u0442
-ACTIVE_REQUESTS=\u0410\u043A\u0442\u0438\u0432\u043D\u044B\u0435 \u0437\u0430\u044F\u0432\u043A\u0438
-STATISTICS=\u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043A\u0430
-PROMO_CODE=\u041F\u0440\u043E\u043C\u043E\u043A\u043E\u0434
-BALANCE=\u0411\u0430\u043B\u0430\u043D\u0441
-DEALS_HISTORY=\u0418\u0441\u0442\u043E\u0440\u0438\u044F \u0441\u0434\u0435\u043B\u043E\u043A
+#Кабинет
+ACTIVE_REQUESTS=Активные заявки
+STATISTICS=Статистика
+PROMO_CODE=Промокод
+BALANCE=Баланс
+DEALS_HISTORY=История сделок
