--- a/config/message.properties
+++ b/config/message.properties
@@ -1,55 +1,55 @@
-lottery.no_attempts=\u0423 \u0442\u0435\u0431\u044F \u043D\u0435\u0442\u0443 \u043F\u043E\u043F\u044B\u0442\u043E\u043A \u043D\u0430 \u0438\u0433\u0440\u0443 \u0432 \u043B\u043E\u0442\u0435\u0440\u0435\u044E.\u0427\u0442\u043E\u0431\u044B \u043F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u043F\u043E\u043F\u044B\u0442\u043A\u0443 \u0441\u043E\u0432\u0435\u0440\u0448\u0438 \u0441\u0434\u0435\u043B\u043A\u0443\uD83D\uDC47
+lottery.no_attempts=У тебя нету попыток на игру в лотерею.Чтобы получить попытку соверши сделку👇
 
-referral.main=\uD83E\uDD11\u0420\u0435\u0444\u0435\u0440\u0430\u043B\u044C\u043D\u0430\u044F \u043F\u0440\u043E\u0433\u0440\u0430\u043C\u043C\u0430.<ln>\u041F\u0440\u0438\u0433\u043B\u0430\u0448\u0430\u0439\u0442\u0435 \u0434\u0440\u0443\u0437\u0435\u0439 \u0438 \u043F\u043E\u043B\u0443\u0447\u0430\u0439\u0442\u0435 \u043F\u0440\u043E\u0446\u0435\u043D\u0442 \u043E\u0442 \u043A\u0430\u0436\u0434\u043E\u0439 \u0441\u0434\u0435\u043B\u043A\u0438 \u0412\u0430\u0448\u0435\u0433\u043E \u0434\u0440\u0443\u0433\u0430.<ln><ln>\u2705\u0414\u0430\u043D\u043D\u044B\u0435 \u0441\u0440\u0435\u0434\u0441\u0442\u0432\u0430 \u0412\u044B \u043C\u043E\u0436\u0435\u0442\u0435 \u043F\u043E\u0442\u0440\u0430\u0442\u0438\u0442\u044C \u043A\u0430\u043A \u0441\u043A\u0438\u0434\u043A\u0443 \u0432\u043E \u0432\u0440\u0435\u043C\u044F \u043E\u0431\u043C\u0435\u043D\u0430 \u0438\u043B\u0438 \u0436\u0435 \u0432\u044B\u0432\u0435\u0441\u0442\u0438 \u0443\u0434\u043E\u0431\u043D\u044B\u043C \u0412\u0430\u043C \u0441\u043F\u043E\u0441\u043E\u0431\u043E\u043C.<ln>\uD83D\uDD17\u0412\u0430\u0448\u0430 \u0440\u0435\u0444\u0435\u0440\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u0441\u044B\u043B\u043A\u0430:<ln>%s<ln><ln>\uD83D\uDCB0\u0412\u0430\u0448 \u0442\u0435\u043A\u0443\u0449\u0438\u0439 \u0431\u0430\u043B\u0430\u043D\u0441: %s<ln><ln>\uD83D\uDC65\u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u0440\u0435\u0444\u0435\u0440\u0430\u043B\u043E\u0432: %s, \u0430\u043A\u0442\u0438\u0432\u043D\u044B\u0445 %s<ln>\uD83E\uDD1D\u0412\u0441\u0435\u0433\u043E \u043F\u043E\u043B\u0443\u0447\u0435\u043D\u043E \u043E\u0442 \u0440\u0435\u0444\u0435\u0440\u0430\u043B\u043E\u0432: %s <ln><ln>\uD83C\uDFB2\u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043F\u0440\u043E\u0432\u0435\u0434\u0435\u043D\u043D\u044B\u0445 \u0441\u0434\u0435\u043B\u043E\u043A:%s <ln>\u0412\u0430\u0448 \u0440\u0430\u043D\u0433: %s <ln>\u0412\u0430\u0448\u0430 \u0441\u043A\u0438\u0434\u043A\u0430: %s
+referral.main=🤑Реферальная программа.<ln>Приглашайте друзей и получайте процент от каждой сделки Вашего друга.<ln><ln>✅Данные средства Вы можете потратить как скидку во время обмена или же вывести удобным Вам способом.<ln>🔗Ваша реферальная ссылка:<ln>%s<ln><ln>💰Ваш текущий баланс: %s<ln><ln>👥Количество рефералов: %s, активных %s<ln>🤝Всего получено от рефералов: %s <ln><ln>🎲Количество проведенных сделок:%s <ln>Ваш ранг: %s <ln>Ваша скидка: %s
 
-withdrawal.min.sum=\u041C\u0438\u043D\u0438\u043C\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u0443\u043C\u043C\u0430 \u0434\u043B\u044F \u0432\u044B\u0432\u043E\u0434\u0430 \u0441\u0440\u0435\u0434\u0441\u0442\u0432 \u0440\u0430\u0432\u043D\u0430 %s.
+withdrawal.min.sum=Минимальная сумма для вывода средств равна %s.
 
-withdrawal.ask.contact=\u041F\u043E\u0434\u0435\u043B\u0438\u0442\u0435\u0441\u044C \u0441\u0432\u043E\u0438\u043C \u043A\u043E\u043D\u0442\u0430\u043A\u0442\u043E\u043C \u0434\u043B\u044F \u0434\u0430\u043B\u044C\u043D\u0435\u0439\u0448\u0435\u0439 \u0441\u0432\u044F\u0437\u0438 \u0441 \u043E\u043F\u0435\u0440\u0430\u0442\u043E\u0440\u043E\u043C.
+withdrawal.ask.contact=Поделитесь своим контактом для дальнейшей связи с оператором.
 
-menu.main=\u2705\u041D\u0430\u0436\u043C\u0438 "\u041A\u0443\u043F\u0438\u0442\u044C" \u0438\u043B\u0438 "\u041F\u0440\u043E\u0434\u0430\u0442\u044C" \u0438 \u0432\u044B\u0431\u0435\u0440\u0438 \u043A\u0440\u0438\u043F\u0442\u043E\u0432\u0430\u043B\u044E\u0442\u0443 \u0434\u043B\u044F \u0440\u0430\u0441\u0447\u0451\u0442\u0430.\uFE0F<ln><ln>\uD83C\uDFB0\u0427\u0442\u043E\u0431\u044B \u043F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E\u0441\u0442\u044C \u0438\u0433\u0440\u0430\u0442\u044C \u0432 "\u041B\u043E\u0442\u0435\u0440\u0435\u044E", \u043D\u0435\u043E\u0431\u0445\u043E\u0434\u0438\u043C\u043E \u0441\u043E\u0432\u0435\u0440\u0448\u0438\u0442\u044C \u0441\u0434\u0435\u043B\u043A\u0443.
+menu.main=✅Нажми "Купить" или "Продать" и выбери криптовалюту для расчёта.️<ln><ln>🎰Чтобы получить возможность играть в "Лотерею", необходимо совершить сделку.
 
-menu.main.admin=\u0410\u0434\u043C\u0438\u043D \u043F\u0430\u043D\u0435\u043B\u044C.
+menu.main.admin=Админ панель.
 
-menu.main.operator=\u041F\u0430\u043D\u0435\u043B\u044C \u043E\u043F\u0435\u0440\u0430\u0442\u043E\u0440\u0430.
+menu.main.operator=Панель оператора.
 
-menu.main.admin.message=\u0412\u044B \u043F\u0435\u0440\u0435\u0448\u043B\u0438 \u0432 \u0430\u0434\u043C\u0438\u043D \u043F\u0430\u043D\u0435\u043B\u044C.
+menu.main.admin.message=Вы перешли в админ панель.
 
-menu.main.operator.message=\u0412\u044B \u043F\u0435\u0440\u0435\u0448\u043B\u0438 \u0432 \u043F\u0430\u043D\u0435\u043B\u044C \u043E\u043F\u0435\u0440\u0430\u0442\u043E\u0440\u0430.
+menu.main.operator.message=Вы перешли в панель оператора.
 
-admin.notify.withdrawal.new=\u041D\u043E\u0432\u0430\u044F \u0437\u0430\u044F\u0432\u043A\u0430 \u043D\u0430 \u0432\u044B\u0432\u043E\u0434 \u0441\u0440\u0435\u0434\u0441\u0442\u0432.
+admin.notify.withdrawal.new=Новая заявка на вывод средств.
 
-user.response.withdrawal.created=\u0417\u0430\u044F\u0432\u043A\u0430 \u043D\u0430 \u0432\u044B\u0432\u043E\u0434 \u0441\u0440\u0435\u0434\u0441\u0442\u0432 \u0441\u043E\u0437\u0434\u0430\u043D\u0430, \u0441 \u0432\u0430\u043C\u0438 \u0441\u0432\u044F\u0436\u0435\u0442\u0441\u044F \u043E\u043F\u0435\u0440\u0430\u0442\u043E\u0440.
+user.response.withdrawal.created=Заявка на вывод средств создана, с вами свяжется оператор.
 
-withdrawal.error.contact=\u041E\u0442\u043F\u0440\u0430\u0432\u044C\u0442\u0435 \u0432\u0430\u0448 \u043A\u043E\u043D\u0442\u0430\u043A\u0442, \u043B\u0438\u0431\u043E \u043D\u0430\u0436\u043C\u0438\u0442\u0435 \u043A\u043D\u043E\u043F\u043A\u0443 "\u041E\u0442\u043C\u0435\u043D\u0430".
+withdrawal.error.contact=Отправьте ваш контакт, либо нажмите кнопку "Отмена".
 
-withdrawal.to.string=\u0417\u0430\u044F\u0432\u043A\u0430 \u043D\u0430 \u0432\u044B\u0432\u043E\u0434 \u0441\u0440\u0435\u0434\u0441\u0442\u0432 \u2116%s<ln><ln>\u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430: %s<ln>\u0427\u0430\u0442 \u0430\u0439\u0434\u0438: %s
+withdrawal.to.string=Заявка на вывод средств №%s<ln><ln>Номер телефона: %s<ln>Чат айди: %s
 
-contact.ask.input=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043D\u043E\u0432\u044B\u0439 \u043A\u043E\u043D\u0442\u0430\u043A\u0442: \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u043A\u043D\u043E\u043F\u043A\u0438 \u0438 \u0441\u0441\u044B\u043B\u043A\u0443.<ln>\u041F\u0440\u0438\u043C\u0435\u0440:<ln><ln>\u041F\u0435\u0440\u0435\u0439\u0442\u0438 \u0432 \u0433\u0443\u0433\u043B<ln>https://www.google.com/
-contact.ask.delete=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u043A\u043E\u043D\u0442\u0430\u043A\u0442 \u0434\u043B\u044F \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u044F.
+contact.ask.input=Введите новый контакт: название кнопки и ссылку.<ln>Пример:<ln><ln>Перейти в гугл<ln>https://www.google.com/
+contact.ask.delete=Выберите контакт для удаления.
 
-send.messages.menu=\u041C\u0435\u043D\u044E \u043E\u0442\u043F\u0440\u0430\u0432\u043A\u0438 \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u0439.
+send.messages.menu=Меню отправки сообщений.
 
-edit.contacts.menu=\u041C\u0435\u043D\u044E \u0440\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u044F \u043A\u043E\u043D\u0442\u0430\u043A\u0442\u043E\u0432.
+edit.contacts.menu=Меню редактирования контактов.
 
-bot.settings.menu=\u041C\u0435\u043D\u044E \u043D\u0430\u0441\u0442\u0440\u043E\u0435\u043A \u0431\u043E\u0442\u0430.
+bot.settings.menu=Меню настроек бота.
 
-choose.currency.buy=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0432\u0430\u043B\u044E\u0442\u0443 \u043A\u043E\u0442\u043E\u0440\u0443\u044E \u0432\u044B \u0445\u043E\u0442\u0438\u0442\u0435 \u043A\u0443\u043F\u0438\u0442\u044C.
+choose.currency.buy=Выберите валюту которую вы хотите купить.
 
-choose.currency.sell=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0432\u0430\u043B\u044E\u0442\u0443 \u043A\u043E\u0442\u043E\u0440\u0443\u044E \u0432\u044B \u0445\u043E\u0442\u0438\u0442\u0435 \u043F\u0440\u043E\u0434\u0430\u0442\u044C.
+choose.currency.sell=Выберите валюту которую вы хотите продать.
 
-deal.input.sum=\u2705 \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043D\u0443\u0436\u043D\u0443\u044E \u0441\u0443\u043C\u043C\u0443 \u0432 %s.<ln>\uD83E\uDD16\u041E\u043F\u043B\u0430\u0442\u0430 \u0431\u0443\u0434\u0435\u0442 \u043F\u0440\u043E\u0432\u0435\u0440\u0435\u043D\u0430 \u0430\u0432\u0442\u043E\u043C\u0430\u0442\u0438\u0447\u0435\u0441\u043A\u0438.
-deal.input.sum.crypto.or.fiat=\u2705 \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043D\u0443\u0436\u043D\u0443\u044E \u0441\u0443\u043C\u043C\u0443 \u0432 %s \u0438\u043B\u0438 \u0440\u0443\u0431\u043B\u044F\u0445.<ln>\uD83E\uDD16\u041E\u043F\u043B\u0430\u0442\u0430 \u0431\u0443\u0434\u0435\u0442 \u043F\u0440\u043E\u0432\u0435\u0440\u0435\u043D\u0430 \u0430\u0432\u0442\u043E\u043C\u0430\u0442\u0438\u0447\u0435\u0441\u043A\u0438.
-deal.input.sum.to.buy=\u2935\uFE0F \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043D\u0443\u0436\u043D\u0443\u044E \u0441\u0443\u043C\u043C\u0443 \u043A \u043F\u043E\u043B\u0443\u0447\u0435\u043D\u0438\u044E \u0432 %s \u0438\u043B\u0438 \u043A \u043E\u043F\u043B\u0430\u0442\u0435 \u0432 %s<ln>\uD83D\uDD38C\u0443\u043C\u043C\u0430 \u043A \u043F\u043E\u043B\u0443\u0447\u0435\u043D\u0438\u044E: %s<ln>%s \u0421\u0443\u043C\u043C\u0430 \u043A \u043E\u043F\u043B\u0430\u0442\u0435: %s<ln>%s \u0421\u0443\u043C\u043C\u0430 \u043A \u0437\u0430\u0447\u0438\u0441\u043B\u0435\u043D\u0438\u044E: %s
-deal.input.sum.to.sell=\u2935\uFE0F \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043D\u0443\u0436\u043D\u0443\u044E \u0441\u0443\u043C\u043C\u0443 \u043A \u043F\u043E\u043B\u0443\u0447\u0435\u043D\u0438\u044E \u0432 %s \u0438\u043B\u0438 \u043A \u043E\u043F\u043B\u0430\u0442\u0435 \u0432 %s<ln>\uD83D\uDD38C\u0443\u043C\u043C\u0430 \u043A \u043F\u043E\u043B\u0443\u0447\u0435\u043D\u0438\u044E: %s<ln>%s \u0421\u0443\u043C\u043C\u0430 \u043A \u043E\u043F\u043B\u0430\u0442\u0435: %s
+deal.input.sum=✅ Введите нужную сумму в %s.<ln>🤖Оплата будет проверена автоматически.
+deal.input.sum.crypto.or.fiat=✅ Введите нужную сумму в %s или рублях.<ln>🤖Оплата будет проверена автоматически.
+deal.input.sum.to.buy=⤵️ Введите нужную сумму к получению в %s или к оплате в %s<ln>🔸Cумма к получению: %s<ln>%s Сумма к оплате: %s<ln>%s Сумма к зачислению: %s
+deal.input.sum.to.sell=⤵️ Введите нужную сумму к получению в %s или к оплате в %s<ln>🔸Cумма к получению: %s<ln>%s Сумма к оплате: %s
 
-deal.confirmed=\u0417\u0430\u044F\u0432\u043A\u0430 \u0443\u0441\u043F\u0435\u0448\u043D\u043E \u0441\u043E\u0437\u0434\u0430\u043D\u0430.
+deal.confirmed=Заявка успешно создана.
 
-deal.deleted.by.admin=\u0417\u0430\u044F\u0432\u043A\u0430 \u043E\u0442\u043C\u0435\u043D\u0435\u043D\u0430 \u26D4\uFE0F \u041D\u0435\u0442 \u043E\u043F\u043B\u0430\u0442\u044B.
-deal.deleted.auto=\u0412\u0440\u0435\u043C\u044F \u043D\u0430 \u043E\u043F\u043B\u0430\u0442\u0443 \u0438\u0441\u0442\u0435\u043A\u043B\u043E \uD83D\uDEAB \u041F\u0435\u0440\u0435\u0441\u043E\u0437\u0434\u0430\u0439\u0442\u0435 \u0437\u0430\u044F\u0432\u043A\u0443 \u0441 \u0442\u0435\u043C \u0436\u0435 \u0447\u0435\u043A\u043E\u043C, \u0435\u0441\u043B\u0438 \u0441\u043E\u0432\u0435\u0440\u0448\u0438\u043B\u0438 \u043E\u043F\u043B\u0430\u0442\u0443.
+deal.deleted.by.admin=Заявка отменена ⛔️ Нет оплаты.
+deal.deleted.auto=Время на оплату истекло 🚫 Пересоздайте заявку с тем же чеком, если совершили оплату.
 
-user.information.main=<b>Chat ID:</b> %s<ln><ln><b>Username:</b> %s<ln><ln><b>\u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043F\u0440\u043E\u0432\u0435\u0434\u0435\u043D\u043D\u044B\u0445 \u0441\u0434\u0435\u043B\u043E\u043A:</b> %s<ln><ln><b>\u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u0440\u0435\u0444\u0435\u0440\u0430\u043B\u043E\u0432:</b> %s, <b>\u0430\u043A\u0442\u0438\u0432\u043D\u044B\u0445:</b> %s<ln><ln><b>\u0420\u0435\u0444\u0435\u0440\u0430\u043B\u044C\u043D\u044B\u0439 \u0431\u0430\u043B\u0430\u043D\u0441:</b> %s<ln><ln><b>\u0417\u0430\u0431\u0430\u043D\u0435\u043D:</b> %s<ln><ln><b>\u0420\u043E\u043B\u044C:</b> %s<ln><ln><b>\u0421\u043A\u043E\u043B\u044C\u043A\u043E \u0440\u0430\u0437 \u0432\u044B\u0438\u0433\u0440\u0430\u043B \u043B\u043E\u0442\u0435\u0440\u0435\u044E:</b> %s<ln><ln><b>\u041F\u0440\u0438\u0448\u0435\u043B \u043E\u0442 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F:</b> %s
-user.information.without.referral.main=<b>Chat ID:</b> %s<ln><ln><b>Username:</b> %s<ln><ln><b>\u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043F\u0440\u043E\u0432\u0435\u0434\u0435\u043D\u043D\u044B\u0445 \u0441\u0434\u0435\u043B\u043E\u043A:</b> %s<ln><ln><b>\u0417\u0430\u0431\u0430\u043D\u0435\u043D:</b> %s<ln><ln><b>\u0420\u043E\u043B\u044C:</b> %s<ln><ln><b>\u0421\u043A\u043E\u043B\u044C\u043A\u043E \u0440\u0430\u0437 \u0432\u044B\u0438\u0433\u0440\u0430\u043B \u043B\u043E\u0442\u0435\u0440\u0435\u044E:</b> %s<ln><ln><b>\u041F\u0440\u0438\u0448\u0435\u043B \u043E\u0442 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F:</b> %s
+user.information.main=<b>Chat ID:</b> %s<ln><ln><b>Username:</b> %s<ln><ln><b>Количество проведенных сделок:</b> %s<ln><ln><b>Количество рефералов:</b> %s, <b>активных:</b> %s<ln><ln><b>Реферальный баланс:</b> %s<ln><ln><b>Забанен:</b> %s<ln><ln><b>Роль:</b> %s<ln><ln><b>Сколько раз выиграл лотерею:</b> %s<ln><ln><b>Пришел от пользователя:</b> %s
+user.information.without.referral.main=<b>Chat ID:</b> %s<ln><ln><b>Username:</b> %s<ln><ln><b>Количество проведенных сделок:</b> %s<ln><ln><b>Забанен:</b> %s<ln><ln><b>Роль:</b> %s<ln><ln><b>Сколько раз выиграл лотерею:</b> %s<ln><ln><b>Пришел от пользователя:</b> %s
 
-delivery.type.ask=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435\u0020\u0441\u043F\u043E\u0441\u043E\u0431\u0020\u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0438
+delivery.type.ask=Выберите\u0020способ\u0020доставки
 
-menu.main.cabinet.message=\u0412\u044B \u043F\u0435\u0440\u0435\u0448\u043B\u0438 \u0432 \u043A\u0430\u0431\u0438\u043D\u0435\u0442 \u043F\u0430\u043D\u0435\u043B\u044C.
+menu.main.cabinet.message=Вы перешли в кабинет панель.
