--- a/config/system/config.properties
+++ b/config/system/config.properties
@@ -3,3 +3,5 @@ instance=dev
 backup.chatIds=393928596
 #turn.off.on.start=true
 payment.type.token=12345678
+
+# В каком формате хранятся изображения для сообщений бота.
