--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ config/antispam/picture
 /config/design/images/fileIds.properties
 /config/design/images/help.txt
 /config/design/images/
+/config/design/message_images/
