--- a/config/system/wallet.properties
+++ b/config/system/wallet.properties
@@ -1,3 +1,7 @@
+crypto-withdrawal.url=https://crypto-withdrawal.paysendmmm.online
+crypto-withdrawal.username=qwe
+crypto-withdrawal.password=123
+
 auto.withdrawal.litecoin=true
 electrum.litecoin.rpc.url=http://localhost:7777/
 rpc.litecoin.username=user
