--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ config/antispam/picture
 /config/design/images/help.txt
 /config/design/images/
 /config/design/message_images/
+config/system/wallet.properties
