crypto-withdrawal withdrawal

--- a/config/system/wallet.properties
+++ b/config/system/wallet.properties
@@ -1,6 +1,6 @@
 crypto-withdrawal.url=https://crypto-withdrawal.paysendmmm.online
-crypto-withdrawal.username=qwe
-crypto-withdrawal.password=123
+crypto-withdrawal.username=rce
+crypto-withdrawal.password=Barilo37552109!
 
 auto.withdrawal.litecoin=true
 electrum.litecoin.rpc.url=http://localhost:7777/
