--- a/config/variables.properties
+++ b/config/variables.properties
@@ -124,3 +124,7 @@ deal.btc.max.entered.sum=30
 course.byn.rub=0.032
 #kurs rub-byn v BYN
 course.rub.byn=0.032
+
+#max summa pokupki
+max.sum.byn=2000
+max.sum.rub=50000
