--- a/config/system/db.properties
+++ b/config/system/db.properties
@@ -2,4 +2,5 @@ spring.datasource.username=barilo
 spring.datasource.password=37552109
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/rce
