--- a/config/system/config.properties
+++ b/config/system/config.properties
@@ -1,5 +1,5 @@
 bot.fiat.currencies=RUB,BYN
-#instance=dev
+instance=dev
 backup.chatIds=393928596
 #turn.off.on.start=true
 payment.type.token=12345678
