redis + ban unban

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ server.servlet.session.timeout=30m
 spring.kafka.bootstrap-servers=45.88.3.148:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=37552109
+spring.cache.redis.time-to-live=1200000
