--- a/config/system/db.properties
+++ b/config/system/db.properties
@@ -3,3 +3,8 @@ spring.datasource.password=37552109
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/rce
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=37552109
+spring.cache.redis.time-to-live=1200000
