--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ logging.level.tgb.btc.library=DEBUG
 logging.level.tgb.btc.web=DEBUG
 spring.config.import=file:config/bot/server.properties,file:config/system/db.properties,file:config/bot/modules.properties,\
   file:config/bot/games/games.properties,file:config/system/wallet.properties,file:config/bot/bot.properties,file:config/bot/functions.properties,\
-  file:config/antispam/antispam.properties
+  file:config/antispam/antispam.properties,file:config/system/config.properties
 spring.main.allow-bean-definition-overriding=true
 server.servlet.session.tracking-modes=COOKIE
 server.servlet.session.timeout=30m
