--- a/config/system/db.properties
+++ b/config/system/db.properties
@@ -1,5 +1,5 @@
 spring.datasource.username=barilo
-spring.datasource.password=37552109
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/rce
