--- a/config/variables.properties
+++ b/config/variables.properties
@@ -1,4 +1,4 @@
-#kurs dollara
+﻿#kurs dollara
 course.usd.rub.buy.btc=88.5
 course.usd.rub.buy.ltc=88.5
 course.usd.rub.buy.usdt=88.5
@@ -128,3 +128,5 @@ course.rub.byn=0.032
 #max summa pokupki
 max.sum.byn=2000
 max.sum.rub=50000
+
+merchant.list=DASH_PAY,PAYSCROW
