--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.kafka.bootstrap-servers=45.88.3.148:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.cache.type=simple
+spring.mvc.log-request-details=true
+logging.level.org.springframework.web=DEBUG
