--- a/config/variables.properties
+++ b/config/variables.properties
@@ -129,5 +129,5 @@ course.rub.byn=0.032
 max.sum.byn=2000
 max.sum.rub=50000
 
-merchant.list=DASH_PAY,PAYSCROW
+merchant.list=DASH_PAY,PAYSCROW,ALFA_TEAM_TJS
 review.publish.minutes.interval = 10
