--- a/config/variables.properties
+++ b/config/variables.properties
@@ -129,5 +129,5 @@ course.rub.byn=0.032
 max.sum.byn=2000
 max.sum.rub=50000
 
-merchant.list=DASH_PAY,PAYSCROW,ALFA_TEAM_TJS,ALFA_TEAM_VTB,ALFA_TEAM_ALFA,ALFA_TEAM_VTB
+merchant.list=DASH_PAY,PAYSCROW,ALFA_TEAM_TJS,ALFA_TEAM_VTB,ALFA_TEAM_ALFA,ALFA_TEAM_SBER
 review.publish.minutes.interval = 10
