--- a/config/variables.properties
+++ b/config/variables.properties
@@ -129,5 +129,7 @@ course.rub.byn=0.032
 max.sum.byn=2000
 max.sum.rub=50000
 
-merchant.list=EVO_PAY
+nicepay.bound.amount=15000
+
+merchant.list=NICE_PAY
 review.publish.minutes.interval = 10
