--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.config.import=file:config/bot/server.properties,file:config/system/db.pro
   file:config/bot/games/games.properties,file:config/system/wallet.properties,file:config/bot/bot.properties,file:config/bot/functions.properties,\
   file:config/antispam/antispam.properties,file:config/system/config.properties,file:config/payscrow.properties,optional:file:config/dashpay.properties,\
   optional:file:config/alfateam.properties, optional:file:config/paypoints.properties, optional:file:config/onlypays.properties, optional:file:config/evopay.properties,\
-  optional:file:config/nicepay.properties
+  optional:file:config/nicepay.properties, optional:file:config/payfinity.properties
 spring.main.allow-bean-definition-overriding=true
 server.servlet.session.tracking-modes=COOKIE
 server.servlet.session.timeout=30m
