--- a/config/system/config.properties
+++ b/config/system/config.properties
@@ -2,6 +2,6 @@ bot.fiat.currencies=RUB,BYN
 instance=dev
 backup.chatIds=393928596
 #turn.off.on.start=true
-payment.type.token=12345678
+payment.type.token=
 
 # В каком формате хранятся изображения для сообщений бота.
