--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.kafka.bootstrap-servers=45.88.3.148:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.cache.type=simple
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
