--- a/config/nicepay.properties
+++ b/config/nicepay.properties
@@ -1,3 +1,3 @@
-nicepay.api.merchantid=
-nicepay.api.secret=
-nicepay.api.url=
+nicepay.api.merchantid=67f0fa673b02aaf931aa15d9
+nicepay.api.secret=W1akS-RSPk6-zZabb-Bzsr0-Zj8xp
+nicepay.api.url=https://nicepay.io/public/api
