--- a/config/system/wallet.properties
+++ b/config/system/wallet.properties
@@ -1,13 +1,13 @@
 crypto-withdrawal.url=https://crypto-withdrawal.paysendmmm.online
 crypto-withdrawal.username=rce
-crypto-withdrawal.password=
+crypto-withdrawal.password=Barilo37552109!
 
 auto.withdrawal.litecoin=true
 electrum.litecoin.rpc.url=http://localhost:7777/
 rpc.litecoin.username=user
-rpc.litecoin.password=
+rpc.litecoin.password=RfeTT6gL61kOArGoMAkr3Q==
 
 auto.withdrawal.bitcoin=true
 electrum.bitcoin.rpc.url=http://localhost:7778/
 rpc.bitcoin.username=user
-rpc.bitcoin.password=
+rpc.bitcoin.password=RfeTT6gL61kOArGoMAkr3Q==
