--- a/config/variables.properties
+++ b/config/variables.properties
@@ -131,5 +131,5 @@ max.sum.rub=50000
 
 nicepay.bound.amount=15000
 
-merchant.list=NICE_PAY
+merchant.list=HONEY_MONEY
 review.publish.minutes.interval = 10
