--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ config/antispam/picture
 /config/design/message_images/
 /config/system/wallet.properties
 /config/payscrow.properties
+/config/honeymoney.properties
