--- a/.gitignore
+++ b/.gitignore
@@ -37,11 +37,4 @@ bot.properties
 config/antispam/picture
 *.log
 *.gz
-/config/local.properties
-/config/design/images/fileIds.properties
-/config/design/images/help.txt
-/config/design/images/
-/config/design/message_images/
-/config/system/wallet.properties
-/config/payscrow.properties
-/config/honeymoney.properties
+/config/*
