--- a/config_templates/system/db.properties
+++ b/config_templates/system/db.properties
@@ -3,6 +3,7 @@ spring.datasource.password=
 spring.datasource.driver-class-name=
 spring.jpa.hibernate.ddl-auto=
 spring.datasource.url=
+database.name=
 
 spring.data.redis.host=
 spring.data.redis.port=
